# ml-algorithms

./: README.md  pyproject.toml
ml_algos/: linear_regression.py  metrics.py  model_selection.py  polynomial_regression.py
